IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/14/14: IMOD_4-8-9
7/16/14: Changes for Batchruntomo: make it rerun align without local
alignments if it fails with it; add ability to detect blank views at ends of
series; allow pre-existing defocus file to be used; make -start option apply
to all sets being run, not just the first; add start point for CTF correction
separate from plotting; add option to do gold erasing before CTF correction;
add option to use existing alignment.  NUMBERS FOR -start OPTION HAVE
CHANGED.

7/15/14: Tiltalign issues warning instead of error if WeightWholeTracks is
entered for non-patch track model (In 4.7).

7/12/14: Added Object menu item to fill in Z in all contours.

7/11/14: Fixed inability to use patch tracking if cumulative correlation was
checked in coarse alignment (In 4.7).

7/11/14: Modified uitest to work with the new way IMOD is solving for angles.
(Bug# 1805)

7/6/14: Made Batchruntomo convert a directive for chopping up patch tracking
contours into option to Imodchopconts instead of Tiltxcorr; fixed problem with 
Imodchopconts testing for whether incompatible options were entered (In 4.7).

7/5/14: IMOD_4-8-8
7/5/14: Batchruntomo has changes for controlling thickness and calls
Restrictalign to reduce variable being solved for when necessary.

7/2/14: Fixed problem with fiducial number that Batchruntomo uses to decide if
stretching can be solved (in 4.7).

7/2/14: IMOD_4-8-7
7/2/14: Added script Restrictalign for setting parameters appropriately in a
Tiltalign command file when there are low numbers of fiducials.

7/1/14: Made Ccderaser able to erase points with large differences from their
neighbors in the border region where regular analysis is not done.

7/1/14: Changed Newstack antialiased reduction to give same image size and
centering as binning (In 4.7).
 
6/27/14: Added option to Alterheader to set space group and made Tilt set it